# pdm-winpacker

./: CHANGELOG.md  README.md  pyproject.toml
pdm_winpacker/: __init__.py  command.py
pdm_winpacker/winpacker/: __init__.py  packedapp.py  utils.py
pdm_winpacker/winpacker/bundler/: __init__.py  bundler.py  command.py  wheelinstaller.py
pdm_winpacker/winpacker/packers/: __init__.py  nsispacker.py  pyapp.nsi  pyapp_msvcrt.nsi  zippacker.py
